Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
      <p>asssitencia tecnica de computadores, notebooks, tabletes</p>
 <table>
 	<tr>
-		<td> <img id="pcgamer" src="img/pc1.jpg" onclick-"clickAlerta('pagina pcgamer');"></td>
-		 <td><img id="pc" src="img/pc2.jpg" onclick-"clickAlerta('pagina pc');"></td>
+		<td> <img id="pc1" src="img/pc1.jpg" onclick-"clickAlerta('pagina pcgamer');"></td>
+		 <td><img id="pc2" src="img/pc2.jpg" onclick-"clickAlerta('pagina pc');"></td>
 		
 	</tr>
 </table>
